--- a/notebooks/03-analysis_NUTS_walkthrough.ipynb
+++ b/notebooks/03-analysis_NUTS_walkthrough.ipynb
@@ -32,6 +32,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "os.environ[\"XLA_FLAGS\"] = \"--xla_force_host_platform_device_count=4 --xla_cpu_multi_thread_eigen=false intra_op_parallelism_threads=1\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update():\n",
+    "    from jax import config\n",
+    "    config.update(\"jax_enable_x64\", True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "update()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import jax\n",
+    "\n",
+    "jax.devices()\n",
+    "from jax import numpy as jnp\n",
+    "jnp.linspace(0.0,1.0,10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#| warning: false\n",
     "from jax import jit, random\n",
     "import pandas as pd\n",
@@ -45,11 +88,37 @@
     "\n",
     "from estival.sampling import tools as esamp\n",
     "\n",
-    "from emu_renewal.process import CosineMultiCurve\n",
+    "from emu_renewal.process import CosineMultiCurve, LinearMultiCurve\n",
     "from emu_renewal.distributions import GammaDens\n",
     "from emu_renewal.renew import RenewalModel\n",
     "from emu_renewal.outputs import get_spaghetti_from_params, get_quant_df_from_spaghetti, plot_spaghetti, plot_uncertainty_patches, PANEL_SUBTITLES, plot_3d_spaghetti\n",
     "from emu_renewal.calibration import StandardCalib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.options.plotting.backend = \"matplotlib\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from jax import scipy as jsp, numpy as jnp\n",
+    "import jax"
    ]
   },
   {
@@ -64,7 +133,7 @@
     "mys_data = pd.read_csv(\"https://github.com/monash-emu/wpro_working/raw/main/data/new_cases.csv\", index_col=0)[\"MYS\"]\n",
     "mys_data.index = pd.to_datetime(mys_data.index)\n",
     "pop = 33e6\n",
-    "analysis_start = datetime(2021, 5, 1)\n",
+    "analysis_start = datetime(2021, 4, 1)\n",
     "analysis_end = datetime(2021, 11, 1)\n",
     "select_data = mys_data.loc[analysis_start: analysis_end]"
    ]
@@ -75,35 +144,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "sda = np.array(select_data)\n",
+    "\n",
+    "from summer2.functions.derived import get_rolling_reduction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rmean7 = get_rolling_reduction(jnp.mean, 7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rmean7(sda).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "init_data = mys_data.loc[analysis_start-timedelta(50):analysis_start-timedelta(1)]\n",
-    "init_data.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "init_data.plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "select_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mys_data.plot()"
+    "#init_data.shape\n",
+    "init_data.plot()\n",
+    "select_data.plot()\n",
+    "select_data.rolling(7).mean().plot()\n",
+    "pd.Series(rmean7(sda), index = select_data.index).plot()\n",
+    "\n",
+    "select_data_ma7 = select_data.rolling(7).mean().dropna()"
    ]
   },
   {
@@ -141,12 +218,48 @@
    "source": [
     "# Define parameter ranges\n",
     "priors = {\n",
-    "    \"gen_mean\": dist.TruncatedNormal(9.0,1.0,low=7.0, high=13.0),#dist.Gamma(10.0, 1.0),\n",
-    "    \"gen_sd\": dist.Gamma(5.0, 1.0),\n",
-    "    \"cdr\": dist.Beta(4.0, 10.0),\n",
+    "    \"gen_mean\": dist.TruncatedNormal(6.0, 1.0,low=2.0,high=10.0),#dist.TruncatedNormal(5.38,1.0,low=2.0, high=12.0),#dist.Gamma(10.0, 1.0),\n",
+    "    \"gen_sd\": dist.Gamma(2.5, 1.0),\n",
+    "    #\"cdr\": dist.Beta(3.5, 10.0),#dist.TruncatedNormal(0.25,0.1,low=0.1, high=0.35),\n",
     "    #\"seed\": dist.Uniform(0.01, 10.0), #Approximate upper seed value (see above). Relatively insensitive to lower limit\n",
-    "    \"rt0\": dist.Normal(0.0,0.25)\n",
+    "    #\"rt0\": dist.TruncatedNormal(0.0,0.1, low=-1.0,high=1.0)\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "{k:v.mean for k,v in priors.items()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xr = np.linspace(2.5,12.5,100)\n",
+    "pd.Series(np.exp(priors[\"gen_mean\"].log_prob(xr)),index=xr).plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xr = np.linspace(0.01,1.0,100)\n",
+    "pd.Series(np.exp(dist.HalfNormal(0.05).log_prob(xr)),index=xr).plot()"
    ]
   },
   {
@@ -164,7 +277,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "calib = StandardCalib(renew_model, select_data, priors, jnp.array(init_data))"
+    "calib = StandardCalib(renew_model, select_data, priors, jnp.array(init_data), {\"rt0\": 0.0, \"cdr\": 0.25}, smoothing=False, data_dispersion_sd=0.1, process_dispersion_sd=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from emu_renewal.distributions import GammaDens"
    ]
   },
   {
@@ -175,10 +297,10 @@
    "source": [
     "# Convenience function for PDF of a prior\n",
     "def plotpdf(p):\n",
-    "    x = np.linspace(p.icdf(0.001),p.icdf(0.999),100)\n",
+    "    x = np.linspace(0.0,20.0,100)\n",
     "    return pd.Series(data=np.exp(p.log_prob(x)),index=x)\n",
     "\n",
-    "#plotpdf(priors[\"cdr\"]).plot()"
+    "#plotpdf().plot()"
    ]
   },
   {
@@ -196,18 +318,84 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from functools import partial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpyro.infer.util import constrain_fn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "select_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "init_duration = 14\n",
+    "window_len = 50\n",
+    "exp_coeff = np.log(select_data.iloc[0]) / init_duration\n",
+    "init_series = np.concatenate([np.zeros(window_len - init_duration), np.exp(exp_coeff * np.arange(init_duration))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "init_series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "constrain_fn(calib.calibration, (), {}, sample_params.iloc[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# We do a random uniform sampling of initial points, but constrain the radius of the sample to lower\n",
     "# than default; because our random process covers a lot of parameter space, we don't want to sample too far out,\n",
     "# but still want to retain more diversity than simply using the median for all chains\n",
-    "kernel = numpyro.infer.NUTS(calib.calibration, dense_mass=True, init_strategy=infer.init_to_uniform(radius=0.5))\n",
+    "kernel = numpyro.infer.NUTS(calib.calibration, dense_mass=True, init_strategy=infer.init_to_mean)\n",
     "\n",
     "# We can start with any values we want for num_samples and num_warmup here\n",
     "# 1000,1000 should be enough 'most of the time', and is useful while testing - expect a few bad runs depending on the seed\n",
     "# 2000,2000 should be considerably more robust\n",
     "# Higher values may be required for exacting results with 'pristine' r values\n",
     "mcmc = numpyro.infer.MCMC(kernel, num_chains=4, num_samples=1000, num_warmup=1000)\n",
-    "rng_key = random.PRNGKey(2)\n",
-    "#mcmc.run(rng_key, extra_fields=(\"accept_prob\",\"diverging\"), params=priors,collect_warmup=True)"
+    "rng_key = random.PRNGKey(15)\n",
+    "#mcmc.run(rng_key, extrafields=(\"accept_prob\",\"diverging\"), params=priors,collect_warmup=True)"
    ]
   },
   {
@@ -241,7 +429,16 @@
     "# Don't worry if chains occasionally dip lower than the others - this is a more 'perfect fit'/better MAP estimate\n",
     "# but outside the center of mass - as long as they come back to the same range for most of the trace, all is well\n",
     "\n",
-    "pd.DataFrame(mcmc.get_extra_fields(True)[\"potential_energy\"]).T.iloc[-1000:].plot()"
+    "pd.DataFrame(mcmc.get_extra_fields(True)[\"potential_energy\"]).T.iloc[100:].plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame(mcmc.get_samples(True)[\"gen_mean\"]).T.plot()"
    ]
   },
   {
@@ -267,7 +464,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "idata = az.from_numpyro(mcmc)"
+    "idata = az.from_dict(mcmc.get_samples(True))"
    ]
   },
   {
@@ -288,10 +485,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This should be an absolute maximum of 1.05 for any actual inference (good enough to \n",
-    "# not be misleading, but still not really appropriate for publication/policy advice)\n",
-    "# For this kind of model, 1.00 is the target\n",
-    "az.summary(idata)"
+    "#az.plot_posterior(idata);"
    ]
   },
   {
@@ -323,12 +517,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_full_result(gen_mean, gen_sd, proc, cdr, rt0):\n",
-    "    return renew_model.renewal_func(gen_mean, gen_sd, proc, calib.init_data/cdr, rt0)\n",
-    "\n",
-    "full_wrap = jit(get_full_result)\n",
-    "spaghetti = get_spaghetti_from_params(renew_model, sample_params, full_wrap)\n",
-    "quantiles_df = get_quant_df_from_spaghetti(renew_model, spaghetti, quantiles)"
+    "az.plot_posterior(idata);"
    ]
   },
   {
@@ -337,8 +526,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "patch_fig = plot_uncertainty_patches(quantiles_df, select_data, qual_colours.Plotly)\n",
-    "patch_fig"
+    "sample_params.components[\"cdr\"] = np.ones(200)*0.25\n",
+    "#sample_params.components[\"rt0\"] = np.ones(200)*0.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_full_result(gen_mean, gen_sd, proc, cdr=0.25, rt0=0.0):\n",
+    "    return renew_model.renewal_func(gen_mean, gen_sd, proc, calib.init_data/cdr, rt0)\n",
+    "\n",
+    "full_wrap = jit(get_full_result)\n",
+    "spaghetti = get_spaghetti_from_params(renew_model, sample_params, full_wrap)\n",
+    "quantiles_df = get_quant_df_from_spaghetti(renew_model, spaghetti, quantiles)"
    ]
   },
   {
@@ -406,7 +609,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#plot_spaghetti(spaghetti, select_data)"
+    "pd.options.plotting.backend=\"plotly\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_spaghetti(spaghetti, select_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_params.loc[(3,277)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_params.loc[(3,366)]"
    ]
   },
   {
