--- a/notebooks/01-introduction.ipynb
+++ b/notebooks/01-introduction.ipynb
@@ -5,6 +5,54 @@
    "id": "0",
    "metadata": {},
    "source": [
+    "## The renewal process\n",
+    "The renewal process forms the basis of the models throughout the notebooks in this folder.\n",
+    "\n",
+    "The idea of a renewal process is quite a general one,\n",
+    "although there are many ways of constructing renewal model in practice,\n",
+    "and we focus on one such approach in our implementation.\n",
+    "\n",
+    "### What is a renewal process?\n",
+    "The basic idea of a renewal process is that previously observed cases of\n",
+    "an infectious disease in an epidemic are responsible for triggering \n",
+    "the cases on a subsequent date.\n",
+    "As such, the number of cases on this date of interest has two ingredients:\n",
+    "1. The average infectiousness of the cases on that date\n",
+    "2. The weighted infectiousness of all previous cases\n",
+    "\n",
+    "#### Average infectiousness of cases on a specific date\n",
+    "We separate this quantity out in our calculations because this\n",
+    "quantity is called the \"instantaneous reproduction number\" or \"$R_t$\",\n",
+    "and is associated with a widely understood epidemiological intuition.\n",
+    "This quantity is the average number of secondary cases that\n",
+    "an infectious individual would be expected to generate if they \n",
+    "retained their current level of infectiousness throughout their \n",
+    "infectious period.\n",
+    "\n",
+    "#### The weighted infectiousness of all previous cases\n",
+    "Having separated out $R_t$, the remaining quantity that we need\n",
+    "to be able to relate $R_t$ to new incidence can be thought\n",
+    "of as the proportion of a person's total infectiousness\n",
+    "that occurs on a particular day of their infection episode.\n",
+    "That is, it is the (discrete) distribution of infectiousness over time \n",
+    "normalised such that the total values of the distribution sum to one.\n",
+    "\n",
+    "#### The equation\n",
+    "Under this conceptual structure, we can think of the following equation:\n",
+    "$$ I_t = R_t \\times \\sum_{u}{g(t-u)} $$\n",
+    "Here $t$ indicates the time dependence.\n",
+    "\n",
+    "###\n",
+    "Having reviewed some of the literature on the use of renewal models for infectious disease\n",
+    "inference, we divide the \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1",
+   "metadata": {},
+   "source": [
     "## Semi-mechanistic modelling introduction\n",
     "\n",
     "### Rationale\n",
@@ -32,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1",
+   "id": "2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2",
+   "id": "3",
    "metadata": {
     "tags": []
    },
@@ -56,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4",
+   "id": "5",
    "metadata": {},
    "source": [
     "### Generation time\n",
@@ -80,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6",
+   "id": "7",
    "metadata": {},
    "source": [
     "### Calculations\n",
@@ -120,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8",
+   "id": "9",
    "metadata": {},
    "source": [
     "Get rid of one loop to get lists/arrays for the incidence and generation time distribution \n",
@@ -144,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10",
+   "id": "11",
    "metadata": {},
    "source": [
     "We can get this down to a one-liner if preferred.\n",
@@ -170,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "source": [
     "Already some interesting phenomena are emerging, \n",
@@ -203,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14",
+   "id": "15",
    "metadata": {},
    "source": [
     "## Susceptible depletion\n",
@@ -242,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +310,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16",
+   "id": "17",
    "metadata": {},
    "source": [
     "Now with susceptible depletion, we have an epi-curve that goes up in the initial phase with $R_0 > 1$,\n",
@@ -271,7 +319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17",
+   "id": "18",
    "metadata": {},
    "source": [
     "## Varying $R_{0}$\n",
@@ -300,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +369,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19",
+   "id": "20",
    "metadata": {},
    "source": [
     "Alternatively, we may wish to use the log process values\n",
@@ -334,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
