Finish explanation of the equation

--- a/notebooks/01-introduction.ipynb
+++ b/notebooks/01-introduction.ipynb
@@ -39,8 +39,21 @@
     "\n",
     "#### The equation\n",
     "Under this conceptual structure, we can think of the following equation:\n",
-    "$$ I_t = R_t \\times \\sum_{u}{g(t-u)} $$\n",
-    "Here $t$ indicates the time dependence.\n",
+    "$$ I_t = R_t \\times \\sum_{\\tau}I_{\\tau}\\times{g(t-\\tau)} $$\n",
+    "Here $t$ indicates the time dependence (usually in days), \n",
+    "such that $I_t$ represents the observed incidence on day $t$,\n",
+    "and $R_t$ represents the instantaneous reproduction number\n",
+    "on day $t$.\n",
+    "The $g(\\cdot)$ function represents the (normalised, discrete) generation interval \n",
+    "for the distribution of the time at which index cases go on to infect their contacts.\n",
+    "We use the symbol $\\tau$ to index discrete time from the start of the simulation\n",
+    "(or sometimes this may be truncated when $g(\\cdot)$ has declined to very low levels)\n",
+    "through to time $t$.\n",
+    "We take the product of the incidence on each preceding day\n",
+    "and the density of the generation interval distribution for the time from that\n",
+    "day to the day for which we are making the calculation ($t$).\n",
+    "Finally we sum these products to obtain the infectiousness of all previous cases\n",
+    "weighted by their infectiousness at the time $t$.\n",
     "\n",
     "###\n",
     "Having reviewed some of the literature on the use of renewal models for infectious disease\n",
