Save progress with background description

--- a/notebooks/01-introduction.ipynb
+++ b/notebooks/01-introduction.ipynb
@@ -11,17 +11,22 @@
     "The idea of a renewal process is quite a general one,\n",
     "although there are many ways of constructing renewal model in practice,\n",
     "and we focus on one such approach in our implementation.\n",
+    "However, for context, we will start off by describing how\n",
+    "our approach to renewal modelling fits with other literature\n",
+    "that adopts this approach.\n",
     "\n",
     "### What is a renewal process?\n",
     "The basic idea of a renewal process is that previously observed cases of\n",
     "an infectious disease in an epidemic are responsible for triggering \n",
     "the cases on a subsequent date.\n",
+    "This is of course captures the basic process by which\n",
+    "infectious disease epidemics propagate.\n",
     "As such, the number of cases on this date of interest has two ingredients:\n",
     "1. The average infectiousness of the cases on that date\n",
     "2. The weighted infectiousness of all previous cases\n",
     "\n",
     "#### Average infectiousness of cases on a specific date\n",
-    "We separate this quantity out in our calculations because this\n",
+    "We separate this variable out in our calculations because this\n",
     "quantity is called the \"instantaneous reproduction number\" or \"$R_t$\",\n",
     "and is associated with a widely understood epidemiological intuition.\n",
     "This quantity is the average number of secondary cases that\n",
@@ -38,7 +43,10 @@
     "normalised such that the total values of the distribution sum to one.\n",
     "\n",
     "#### The equation\n",
-    "Under this conceptual structure, we can think of the following equation:\n",
+    "If we know the current instantaneous reproduction number,\n",
+    "the time series of previous cases and the distribution of the\n",
+    "generation interval from previous cases to new case \n",
+    "generation, we can define the following relationship.\n",
     "$$ I_t = R_t \\times \\sum_{\\tau}I_{\\tau}\\times{g(t-\\tau)} $$\n",
     "Here $t$ indicates the time dependence (usually in days), \n",
     "such that $I_t$ represents the observed incidence on day $t$,\n",
@@ -46,19 +54,55 @@
     "on day $t$.\n",
     "The $g(\\cdot)$ function represents the (normalised, discrete) generation interval \n",
     "for the distribution of the time at which index cases go on to infect their contacts.\n",
-    "We use the symbol $\\tau$ to index discrete time from the start of the simulation\n",
-    "(or sometimes this may be truncated when $g(\\cdot)$ has declined to very low levels)\n",
-    "through to time $t$.\n",
+    "We use the symbol $\\tau$ to index discrete time from the current time $t$\n",
+    "back to the start of the simulation\n",
+    "(or sometimes this may be truncated when $g(\\cdot)$ has declined to very low levels).\n",
     "We take the product of the incidence on each preceding day\n",
     "and the density of the generation interval distribution for the time from that\n",
     "day to the day for which we are making the calculation ($t$).\n",
     "Finally we sum these products to obtain the infectiousness of all previous cases\n",
     "weighted by their infectiousness at the time $t$.\n",
     "\n",
-    "###\n",
+    "Note that this equation defines the relationship between\n",
+    "the three quantities of interest (the case incidence,\n",
+    "the instantaneous reproduction number and the generation interval).\n",
+    "Although this defines the main conceptual relationship we are interested in,\n",
+    "this does not imply that we will invariably be calculating \n",
+    "case incidence from the other two quantities.\n",
+    "\n",
+    "## Applications\n",
     "Having reviewed some of the literature on the use of renewal models for infectious disease\n",
-    "inference, we divide the \n",
-    "\n"
+    "inference, we divide the various renewal models we identified into those that \n",
+    "explicitly model case incidence forward in time as a latent state and those that do not.\n",
+    "\n",
+    "### Non-latent state models\n",
+    "\n",
+    "#### Extensions of compartmental models\n",
+    "[Bettencourt and Ribeiro](https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0002185)\n",
+    "proposed an approach to estimating the reproduction number over time\n",
+    "that is conceptually derived from the assumptions underpinning compartmental models.\n",
+    "Unless modified, this approach inherently assumes that the generation\n",
+    "interval distribution is exponential.\n",
+    "This is unlikely to hold for many infectious diseases and \n",
+    "flexibility in the generation interval distribution is a key component of\n",
+    "many renewal modelling approaches, including the form we have implemented.\n",
+    "\n",
+    "#### Likelihood-based approach\n",
+    "[Wallinga and Teunis](https://academic.oup.com/aje/article-lookup/doi/10.1093/aje/kwh255)\n",
+    "proposed a novel likelihood-based approach to estimating the reproduction number.\n",
+    "This method first defines a relative likelihood that a given case $i$\n",
+    "has been infected by another specific case in the epidemic, as:\n",
+    "$$ p_{ij} = \\frac{w(t_i - t_j)}{\\sum_{i \\neq k}{w(t_i - t_k)}}$$\n",
+    "The inequality indicates that cases cannot infect themselves,\n",
+    "which can also be achieved by setting $w(t)$ to zero at $t=0$.\n",
+    "The reproduction number can then be considered for a specific case $j$ as:\n",
+    "$$ R_j = \\sum_{i}{p_{ij}} $$\n",
+    "Although this method \n",
+    "\n",
+    "#### \n",
+    "\n",
+    "\n",
+    "### Latent state models"
    ]
   },
   {
