Finish background description up to latent state models

--- a/notebooks/01-introduction.ipynb
+++ b/notebooks/01-introduction.ipynb
@@ -18,26 +18,29 @@
     "### What is a renewal process?\n",
     "The basic idea of a renewal process is that previously observed cases of\n",
     "an infectious disease in an epidemic are responsible for triggering \n",
-    "the cases on a subsequent date.\n",
+    "the cases observed on a subsequent date.\n",
     "This is of course captures the basic process by which\n",
     "infectious disease epidemics propagate.\n",
     "As such, the number of cases on this date of interest has two ingredients:\n",
-    "1. The average infectiousness of the cases on that date\n",
+    "1. The average infectiousness of active cases on the date of interest\n",
     "2. The weighted infectiousness of all previous cases\n",
     "\n",
     "#### Average infectiousness of cases on a specific date\n",
-    "We separate this variable out in our calculations because this\n",
-    "quantity is called the \"instantaneous reproduction number\" or \"$R_t$\",\n",
-    "and is associated with a widely understood epidemiological intuition.\n",
-    "This quantity is the average number of secondary cases that\n",
+    "This variable is called the \"instantaneous reproduction number\" or \"$R_t$\" \n",
+    "and is distinguished in renewal models because it\n",
+    "is associated with a widely understood epidemiological intuition.\n",
+    "Specifically, $R_t$ should be thought of as \n",
+    "the average number of secondary cases that\n",
     "an infectious individual would be expected to generate if they \n",
     "retained their current level of infectiousness throughout their \n",
     "infectious period.\n",
+    "It is therefore a key metric of the epidemic state and \n",
+    "the current effectiveness of control interventions.\n",
     "\n",
     "#### The weighted infectiousness of all previous cases\n",
-    "Having separated out $R_t$, the remaining quantity that we need\n",
-    "to be able to relate $R_t$ to new incidence can be thought\n",
-    "of as the proportion of a person's total infectiousness\n",
+    "Having separated out $R_t$, the remaining quantities that we need\n",
+    "in order to relate $R_t$ to new incidence can be thought\n",
+    "of as the proportion of each person's total infectiousness\n",
     "that occurs on a particular day of their infection episode.\n",
     "That is, it is the (discrete) distribution of infectiousness over time \n",
     "normalised such that the total values of the distribution sum to one.\n",
@@ -50,8 +53,7 @@
     "$$ I_t = R_t \\times \\sum_{\\tau}I_{\\tau}\\times{g(t-\\tau)} $$\n",
     "Here $t$ indicates the time dependence (usually in days), \n",
     "such that $I_t$ represents the observed incidence on day $t$,\n",
-    "and $R_t$ represents the instantaneous reproduction number\n",
-    "on day $t$.\n",
+    "and $R_t$ represents the instantaneous reproduction number on day $t$.\n",
     "The $g(\\cdot)$ function represents the (normalised, discrete) generation interval \n",
     "for the distribution of the time at which index cases go on to infect their contacts.\n",
     "We use the symbol $\\tau$ to index discrete time from the current time $t$\n",
@@ -61,7 +63,7 @@
     "and the density of the generation interval distribution for the time from that\n",
     "day to the day for which we are making the calculation ($t$).\n",
     "Finally we sum these products to obtain the infectiousness of all previous cases\n",
-    "weighted by their infectiousness at the time $t$.\n",
+    "weighted by their infectiousness at time $t$.\n",
     "\n",
     "Note that this equation defines the relationship between\n",
     "the three quantities of interest (the case incidence,\n",
@@ -71,7 +73,7 @@
     "case incidence from the other two quantities.\n",
     "\n",
     "## Applications\n",
-    "Having reviewed some of the literature on the use of renewal models for infectious disease\n",
+    "Having reviewed some key literature on the use of renewal models for infectious disease\n",
     "inference, we divide the various renewal models we identified into those that \n",
     "explicitly model case incidence forward in time as a latent state and those that do not.\n",
     "\n",
@@ -90,17 +92,46 @@
     "#### Likelihood-based approach\n",
     "[Wallinga and Teunis](https://academic.oup.com/aje/article-lookup/doi/10.1093/aje/kwh255)\n",
     "proposed a novel likelihood-based approach to estimating the reproduction number.\n",
-    "This method first defines a relative likelihood that a given case $i$\n",
-    "has been infected by another specific case in the epidemic, as:\n",
+    "This method first defines the relative likelihood that a given case $i$\n",
+    "has been infected by another specific case in the epidemic,\n",
+    "rather than any of the other cases in the epidemic, as:\n",
     "$$ p_{ij} = \\frac{w(t_i - t_j)}{\\sum_{i \\neq k}{w(t_i - t_k)}}$$\n",
     "The inequality indicates that cases cannot infect themselves,\n",
-    "which can also be achieved by setting $w(t)$ to zero at $t=0$.\n",
+    "(which could also be achieved by setting $w(t)$ to zero at $t=0$).\n",
     "The reproduction number can then be considered for a specific case $j$ as:\n",
     "$$ R_j = \\sum_{i}{p_{ij}} $$\n",
-    "Although this method \n",
+    "Although this method was reported by the authors as being relatively robust \n",
+    "to incomplete reporting, the approach does inherently assume\n",
+    "that notified cases were triggered by preceding cases in the same epidemic.\n",
+    "It also assumes that the chance that any case $j$ infected a specific \n",
+    "case $i$ is independent of the chance that $j$ infected any other case ($k$),\n",
+    "although this assumption is common to many infectious disease models.\n",
     "\n",
-    "#### \n",
+    "Importantly, this approach does not directly estimate the instantaneous \n",
+    "reproduction number ($R_t$), but rather works forward to consider the\n",
+    "number of future cases that were infected by cases at a particular point in the epidemic.\n",
+    "This quantity is referred to as the \"case\" or \"cohort\" reproduction number,\n",
+    "and so is less applicable to estimates of the effect of population-wide interventions.\n",
     "\n",
+    "#### Conjugate prior-based approach\n",
+    "[Cori et al.](https://academic.oup.com/aje/article/178/9/1505/89262?login=false), \n",
+    "leverage the association of the gamma distribution \n",
+    "as the conjugate prior for the Poisson sampling distribution.\n",
+    "With this elegant approach, the authors start from the same renewal equation\n",
+    "as presented above (although notated in the reverse direction as \n",
+    "$R_t\\sum_{s=1}^{t}{I_{t-s}w_s})$,\n",
+    "and take this quantity as the mean of the Poisson distribution.\n",
+    "The distribution for $R_t$ can then be updated with the number\n",
+    "of cases observed on day $t$ to obtain a posterior distribution for $R_t$.\n",
+    "In practice, this approach provides estimates of $R_t$ that \n",
+    "are highly variable from day to day. However, the authors \n",
+    "address this problem by extending their technique to estimate\n",
+    "$R_t$ over a time window. This provides smoother and \n",
+    "more epidemiological plausible estimates of $R_t$,\n",
+    "which can only be calculated from the time that the time window has elapsed onwards.\n",
+    "\n",
+    "Limitations of this approach include that it would be impossible to\n",
+    "apply this approach directly to predict incidence or $R_t$ into the future.\n",
     "\n",
     "### Latent state models"
    ]
