Summarise all the latent state renewal models

--- a/notebooks/01-introduction.ipynb
+++ b/notebooks/01-introduction.ipynb
@@ -133,7 +133,73 @@
     "Limitations of this approach include that it would be impossible to\n",
     "apply this approach directly to predict incidence or $R_t$ into the future.\n",
     "\n",
-    "### Latent state models"
+    "### Latent state models\n",
+    "Since the onset of the COVID-19 pandemic, \n",
+    "renewal models that include explicit representation of an incidence state \n",
+    "that is calculated sequentially for each time point from the preceding \n",
+    "incidence values have become more prominent.\n",
+    "These models have underpinned some of the most prominent\n",
+    "publications relating to COVID-19 epidemiology,\n",
+    "as well as several software packages that have been used \n",
+    "by public health agencies for estimating $R_t$ to guide policy\n",
+    "(EpiEstim, EpiNow, EpiNow2).\n",
+    "With these approaches, a function of time is typically constructed \n",
+    "to represent the evolution of $R_t$, \n",
+    "the parameters of which can then be calibrated until an accurate\n",
+    "fit to the empiric observations is achieved.\n",
+    "\n",
+    "#### EpiNow2\n",
+    "The [EpiNow2 platform](https://epiforecasts.io/EpiNow2/articles/estimate_infections.html) \n",
+    "has been particularly popular for estimation of $R_t$ of COVID-19.\n",
+    "Although it offers a non-mechanistic approach in addition to \n",
+    "the renewal equation-based method, \n",
+    "the default implementation is based around the renewal model.\n",
+    "The renewal equation implemented by EpiNow2 is denoted:\n",
+    "$$ I_t=R_t\\sum_{\\tau=1}^{g_{max}}{g(\\tau|\\mu_g,\\sigma_g)}I_{t-\\tau}$$\n",
+    "Conceptually, this equation captures the same principles as outlined above,\n",
+    "with the $g_{max}$ limit to the summation indicating that \n",
+    "the generation interval is typically truncated \n",
+    "when the distribution density falls to negligible levels.\n",
+    "$\\mu_g$ and $\\sigma_g$ indicate the parameters to the distribution\n",
+    "used to represent the generation interval,\n",
+    "which may be gamma or log-normal.\n",
+    "By default, the function of $R_t$ over time is modelled with a Gaussian process.\n",
+    "\n",
+    "#### Europe application\n",
+    "In this application, the study investigators adapted the standard\n",
+    "renewal approach to incorporate the depletion of the susceptible population.\n",
+    "Analyses were undertaken separately for each European country,\n",
+    "with additional notation used to indicate the country being addressed.\n",
+    "If this additional notation is ignored, the equation for \n",
+    "the renewal model with susceptible depletion becomes:\n",
+    "$$c_t=(1-\\frac{\\sum_{i=1}^{t-1}{c_i}}{N})R_t\\sum_{\\tau=0}^{t-1}{c_\\tau g_{t-\\tau}}$$\n",
+    "where $N$ represents the total population of the country of analysis.\n",
+    "With this approach, the proportion of the population remaining susceptible\n",
+    "at each time point scales the incidence value,\n",
+    "thus requiring a greater value of $R_t$ to offset this.\n",
+    "This illustrates the flexibility of this approach, \n",
+    "in that such models can track additional quantities \n",
+    "that emerge from the model explicitly as time evolves.\n",
+    "\n",
+    "#### Manaus application\n",
+    "The renewal approach was used to consider the COVID-19 epidemics \n",
+    "in the city of Manaus in Brazil's State of Amazonas.\n",
+    "Manaus suffered a major epidemic of wild-type virus \n",
+    "followed by a major epidemic of the Gamma (or P.1) variant.\n",
+    "As such, the study authors addressed several questions \n",
+    "pertaining to the extent of immune escape of the new variant.\n",
+    "To achieve this, the previous renewal equation is extended to:\n",
+    "$$i_{s,t}=(1-\\frac{n_{s,t}}{N})R_{s,t}\\sum_{\\tau<t}{i_{s,\\tau}g_{t-\\tau}}$$\n",
+    "Again, $N$ represents the total population size,\n",
+    "while $n_{s,t}$ represents the extent of population immunity to strain $s$\n",
+    "and incorporates both immunity from previous infection with strain $s$, \n",
+    "as well as the partial cross-protection afforded by infection \n",
+    "with the other ciruclating strain.\n",
+    "\n",
+    "#### Advantages of latent state models\n",
+    "Because this approach \n",
+    "\n",
+    "The approach implemented within this package is most similar to this approach.\n"
    ]
   },
   {
