Finish up introduction

--- a/notebooks/01-introduction.ipynb
+++ b/notebooks/01-introduction.ipynb
@@ -196,10 +196,14 @@
     "as well as the partial cross-protection afforded by infection \n",
     "with the other ciruclating strain.\n",
     "\n",
-    "#### Advantages of latent state models\n",
-    "Because this approach \n",
-    "\n",
-    "The approach implemented within this package is most similar to this approach.\n"
+    "#### Advantages of latent state renewal models\n",
+    "Because these approaches work forward in time, \n",
+    "it is generally easier to extend the mechanistic aspects of \n",
+    "these types of models and to incorporate additional considerations \n",
+    "(such as the complex population immunity profiles \n",
+    "considered in the Manaus application).\n",
+    "For this reason, the approach implemented within this package\n",
+    "is most similar to this approach."
    ]
   },
   {
