More clarifications and correction to base notebook

--- a/notebooks/01-introduction.ipynb
+++ b/notebooks/01-introduction.ipynb
@@ -27,6 +27,16 @@
     "1. The average infectiousness of active cases on the date of interest\n",
     "2. The weighted infectiousness of all previous cases\n",
     "\n",
+    "Throughout this notebook,\n",
+    "we are using the term \"case\" to mean an infection episode\n",
+    "and are assuming that the point of onset of the case is the same as\n",
+    "the point of infection.\n",
+    "This definition ignores the potentially imortant differences \n",
+    "between the point of infection, the onset of symptoms and\n",
+    "the point of notification through the surveillance systems.\n",
+    "This issue should be addressed formally and will \n",
+    "be considered in subsequent notebooks.\n",
+    "\n",
     "#### Infectiousness of cases at a point in time\n",
     "This variable is called the \"instantaneous reproduction number\" \n",
     "or \"$R_t$\" and is distinguished in renewal models because it\n",
@@ -47,7 +57,10 @@
     "That is, it is the (discrete) distribution of an individual's \n",
     "infectiousness over time normalised such that \n",
     "the total values of the distribution sum to one.\n",
-    "This distribution is termed the generation interval distribution.\n",
+    "By \"infectiousness\" we mean an individual's effective infectiousness,\n",
+    "which is influenced by various host, pathogen and social factors.\n",
+    "If we define infectiousness in this way, \n",
+    "then we can consider this distribution to reflect the generation interval.\n",
     "\n",
     "#### The equation\n",
     "We can define the following relationship between \n",
@@ -63,7 +76,7 @@
     "back to the start of the simulation\n",
     "(or sometimes this may be truncated when $g(\\cdot)$ has declined to very low levels).\n",
     "We take the product of the incidence on each preceding day\n",
-    "and the density of the generation interval distribution for the time from that\n",
+    "and the mass of the generation interval distribution for the time from that\n",
     "day to the day for which we are making the calculation ($t$).\n",
     "Finally we sum these products to obtain the infectiousness of all previous cases\n",
     "weighted by their infectiousness at time $t$.\n",
@@ -166,7 +179,7 @@
     "Conceptually, this equation captures the same principles as outlined above,\n",
     "with the $g_{max}$ limit to the summation indicating that \n",
     "the generation interval is typically truncated \n",
-    "when the distribution density falls to negligible levels.\n",
+    "when the distribution mass falls to negligible levels.\n",
     "$\\mu_g$ and $\\sigma_g$ indicate the parameters to the distribution\n",
     "used to represent the generation interval,\n",
     "which may be gamma or log-normal.\n",
