--- a/notebooks/05-ebola-serraleone.ipynb
+++ b/notebooks/05-ebola-serraleone.ipynb
@@ -100,7 +100,7 @@
    "outputs": [],
    "source": [
     "fitter = CosineMultiCurve()\n",
-    "renew_model = RenewalModel(33e6, analysis_start, analysis_end, proc_update_freq, fitter, GammaDens(), 14, init_series)"
+    "renew_model = RenewalModel(33e6, analysis_start, analysis_end, proc_update_freq, fitter, GammaDens(), 14, init_series, GammaDens())"
    ]
   },
   {
@@ -116,6 +116,8 @@
     "    \"gen_sd\": dist.Uniform(3.0, 7.0),\n",
     "    \"cdr\": dist.Beta(10.0, 4.0),\n",
     "    \"rt_init\": dist.Normal(0.0, 0.25),\n",
+    "    \"report_mean\": dist.Uniform(8.0, 12.0),\n",
+    "    \"report_sd\": dist.Uniform(3.0, 6.0),\n",
     "}"
    ]
   },
@@ -174,8 +176,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_full_result(gen_mean, gen_sd, proc, cdr, rt_init):\n",
-    "    return renew_model.renewal_func(gen_mean, gen_sd, proc, cdr, rt_init)\n",
+    "def get_full_result(gen_mean, gen_sd, proc, cdr, rt_init, report_mean, report_sd):\n",
+    "    return renew_model.renewal_func(gen_mean, gen_sd, proc, cdr, rt_init, report_mean, report_sd)\n",
     "\n",
     "full_wrap = jit(get_full_result)\n",
     "spaghetti = get_spaghetti_from_params(renew_model, sample_params, full_wrap)\n",
